[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/enemy.png" type="Texture" id=1]
[ext_resource path="res://entities/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 6.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 3

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Vision" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="Vision"]
position = Vector2( -15.5, 0 )
scale = Vector2( 1.11979, 1 )
polygon = PoolVector2Array( -0.446515, -32, -0.446515, 32, 70.9954, 64, 299.609, 64, 299.609, -64, 70.9954, -64 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
